@@ -114,6 +114,7 @@
     <Compile Include="Code\AI\StartConnectionTransferImpl.cs" />
     <Compile Include="Code\AI\UpdateHealthTranspiler.cs" />
     <Compile Include="Code\Patcher.cs" />
+    <Compile Include="Code\Notifications\ErrorNotification.cs" />
     <Compile Include="Code\Settings\OptionsPanelTabs\DeathOptions.cs" />
     <Compile Include="Code\Settings\OptionsPanelTabs\LoggingOptions.cs" />
     <Compile Include="Code\Settings\OptionsPanel.cs" />
@@ -122,7 +123,7 @@
     <Compile Include="Code\Settings\OptionsPanelTabs\TransportOptions.cs" />
     <Compile Include="Code\Settings\PanelUtils.cs" />
     <Compile Include="Code\Settings\Settings.cs" />
-    <Compile Include="Code\Settings\UpdateNotification.cs" />
+    <Compile Include="Code\Notifications\UpdateNotification.cs" />
     <Compile Include="Code\XML\XML_Settings.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Code\AI\ResidentAI.cs" />
